# fastapi-workshop

./: README.md  pyproject.toml
src/workshop/: __main__.py  database.py
